color of the text is set to correct contrast; link to the home page added on index.html

--- a/css/common.css
+++ b/css/common.css
@@ -10,11 +10,11 @@ html {
 body a,
 body div,
 body p {
-    color: #dfdfdf
+    color: #474747
 }
 
 body a:hover {
-    color: #cdcdcd
+    color: #121212
 }
 
 .title {
